objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Conversion_From_M1_to_M3__c</fullName>
        <formula>If(
And(
ISBLANK(M003__c),
ISPICKVAL( StageName ,"Closed Lost")),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion From M1 to M3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_M10_to_Close__c</fullName>
        <formula>If(
Or(
ISPICKVAL(StageName,"Closed Won"),
ISPICKVAL(StageName,"Opportunity Closed"),
ISPICKVAL(StageName,"Implementation")),
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_M10_to_M14__c</fullName>
        <formula>If(
And(
ISBLANK(  M014__c ),
ISPICKVAL( StageName ,"Closed Lost")),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion M10 to M14</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_from_M3_to_M8__c</fullName>
        <formula>If(
And(
ISBLANK( M008__c ),
ISPICKVAL( StageName ,"Closed Lost")),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion from M3 to M8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_from_M8_to_M10__c</fullName>
        <formula>If(
And(
ISBLANK(  M010__c  ),
ISPICKVAL( StageName ,"Closed Lost")),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion from M8 to M10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_from_M__c</fullName>
        <formula>If(
And(
ISBLANK( M006__c ),
ISPICKVAL( StageName ,"Closed Lost")),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion from M3 to M6</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Corporate_Display_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Monthly Display Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Enhanced_SEO_Contract_Length__c</fullName>
        <label>Corporate Enhanced SEO - Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Enhanced_SEO_Monthly_Fee__c</fullName>
        <label>Corporate Enhanced SEO Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Enhanced_SEO_Setup_Fee_Per_Loc__c</fullName>
        <label>Corporate Enhanced SEO Setup Fee Per Loc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Enhanced_SEO_Setup_of_Loc__c</fullName>
        <label>Corporate Enhanced SEO Setup # of Loc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Enhanced_SEO_of_Locations__c</fullName>
        <label>Corporate Enhanced SEO # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Monthly_Mgmt_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Per location</inlineHelpText>
        <label>Yodle Web Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Monthly_Organic_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Per Location Per Month</inlineHelpText>
        <label>Organic Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Monthly_PPC_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Corp Funded Monthly PPC Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Recurring_Total__c</fullName>
        <formula>If( 
RecordTypeId ="012600000009YRT",
( Monthly_Management_Fees__c + Monthly_Advertising_Charges__c  +  corp_Media_Management_Fee__c +  Organic_fees__c +  Review_Management_Fee_Per_Location__c +  Monthly_Display_Fees__c +  Facebook_Fee_Per_Location__c +  Advanced_SEO_Setup_Fee_Per_Location__c +  Leads_by_Web_G1__c ),

((Corporate_Monthly_Mgmt_Fees__c * Yodle_Web_Setup_of_Locations__c  )

+(Corporate_Monthly_Organic_Fees__c * Organic__c )+ 

(Centermark_Fee__c * Centermark_of_Locations__c)+ 

Corporate_Monthly_PPC_Budget__c + (corp_Media_Management_Fee__c * Media_Management_Fee_of_Locations__c )+

Corporate_Display_Fees__c + Corporate_Site_Maintenance_Fee__c + (Review_Management_Fee_Per_Location__c * Review_Management_of_Locations__c )+ 
( Email_Fee_Per_Location__c *  Email_of_Locations__c )+

( CM_Lite_Fee_Per_Location__c * CM_Lite_of_Locations__c )

+ ( Advanced_SEO_Fee_Per_Location__c *  Advanced_SEO_of_Locations__c )

+ ( Facebook_Fee_Per_Location__c *  Facebook_of_Locations__c )

+ ( Monthly_Display_Fees__c *  Display_Setup_of_Locations__c )

+ ( Corporate_Enhanced_SEO_Monthly_Fee__c * Corporate_Enhanced_SEO_of_Locations__c )

+ ( Location_Enhanced_SEO_Fee_Per_Location__c * Location_Enhanced_SEO_of_Locations__c)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all reoccurring products &amp; fees.</inlineHelpText>
        <label>Contract Monthly Total Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Setup_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Site_Contract_Length__c</fullName>
        <label>Corporate Site Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Site_Fee__c</fullName>
        <label>Corporate Site Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Site_Maintenance_Fee__c</fullName>
        <label>Corporate Site Monthly Maintenance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Spend_Weighted_Forecast__c</fullName>
        <formula>Corporate_Recurring_Total__c * Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Spend Weighted Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Website_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Website Template Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credited__c</fullName>
        <label>Credited Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Advertising_Sources__c</fullName>
        <label>Current Advertising Sources?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Marketing_Spend__c</fullName>
        <label>Current Annual Marketing Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Online_Marketing_Spend__c</fullName>
        <inlineHelpText>What is the customer currently spending on online/digital marketing</inlineHelpText>
        <label>Current Annual Online Marketing Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Marketing_Initiatives__c</fullName>
        <label>Current Marketing Initiatives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Marketing_Vendors__c</fullName>
        <inlineHelpText>Who are their marketing vendors &amp; what do they like/dislike for each (for PPC, SEO, CRM, Email, Appts, Reviews, etc.)?</inlineHelpText>
        <label>Current Marketing Vendors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_PPC_Budget__c</fullName>
        <label>Current Monthly PPC Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Onboarding?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Imp_Original_Est_Launch_Date__c</fullName>
        <label>Custom Imp Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Implementation_Cost__c</fullName>
        <inlineHelpText>Custom price quote provided by the Implementation Specialist</inlineHelpText>
        <label>Custom Implementation Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Implementation_Estimated_Launch__c</fullName>
        <label>Custom Implementation Estimated Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Implementation_Launch_Date__c</fullName>
        <label>Custom Implementation Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Lifetime_Value__c</fullName>
        <label>Average Customer Lifetime Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Manager__c</fullName>
        <formula>Account.Customer_Success_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Competitors__c</fullName>
        <label>Customer's Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_s_Sales_Funnel__c</fullName>
        <inlineHelpText>What is the customer's sales cycle &amp; key milestones with their end customer?</inlineHelpText>
        <label>Customer's Sales Funnel &amp; Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DESCRIBE_HOW_COOP_PLAN_WORKS__c</fullName>
        <inlineHelpText>% contribution, % of locations contributing, who decides how it’s spent, what programs is it currently funding?</inlineHelpText>
        <label>What is the Ad Fun &amp; How Does it Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Appended__c</fullName>
        <label>Data Appended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Follow_Up_Call__c</fullName>
        <label>Date/Time of Follow-Up Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_certification_complete__c</fullName>
        <label>Date certification complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_certification_sent__c</fullName>
        <label>Date certification sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_Follow_Up__c</fullName>
        <label>Date of 1st Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Mutually_Agreed_Upon_Next_Step__c</fullName>
        <label>Date of Mutually Agreed Upon Next Step</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_CM_Launch__c</fullName>
        <formula>today() -  Organic_Launch_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since CM Launch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Modified__c</fullName>
        <formula>NOW()- LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Modified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_last_Activity__c</fullName>
        <formula>TODAY()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Advertising_Restrictions__c</fullName>
        <inlineHelpText>Can individual locations advertise services on their website that are not offered by the manufacturer? Can they promote these services?</inlineHelpText>
        <label>Dealer Advertising Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Completed_Date__c</fullName>
        <label>Demo Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>for sales exec to checkoff when once a demo scheduled by a sales associate has been completed - regardless of outcome</inlineHelpText>
        <label>Demo Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Rating_Notes__c</fullName>
        <label>Demo Rating Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date__c</fullName>
        <description>Field defines the scheduled demo as assigned by Corporate SDR</description>
        <label>Demo Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Strategy__c</fullName>
        <inlineHelpText>What do we want to focus on during the demo? Are there particular things to highlight?</inlineHelpText>
        <label>Demo Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Value_Date__c</fullName>
        <description>Stores the date when the stage was set to Demo/Value Prop</description>
        <label>Demo/Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dex?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Strategy_Overview__c</fullName>
        <label>Digital Strategy Overview</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Call_Completed_With__c</fullName>
        <inlineHelpText>Who was/were the Discovery Call(s) completed with? (Name, Title, VINTO/VITO)</inlineHelpText>
        <label>Discovery Call Completed With</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Contract_End_Date__c</fullName>
        <formula>( Display_Launch_Date__c )+( Display_Contract_Length__c *30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Contract_Length__c</fullName>
        <label>Display Contract Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Estimated_Launch_Date__c</fullName>
        <label>Display Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Launch_Date__c</fullName>
        <label>Display Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Multiplier__c</fullName>
        <description>.</description>
        <formula>IF(OR( Display_Contract_Length__c = 1, Display_Contract_Length__c = 2, Display_Contract_Length__c = 3, Display_Contract_Length__c = 4, Display_Contract_Length__c = 5), 0.8, (IF(OR(Display_Contract_Length__c = 6,Display_Contract_Length__c = 7, Display_Contract_Length__c = 8, Display_Contract_Length__c = 9, Display_Contract_Length__c = 10, Display_Contract_Length__c = 11),1, IF(Display_Contract_Length__c &gt;=12, 1.2, 0) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Multiplier</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Original_Est_Launch_Date__c</fullName>
        <label>Display Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Setup_Fee_Per_Location__c</fullName>
        <label>Display Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Setup_of_Locations__c</fullName>
        <label>Display Setup # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_contract_status__c</fullName>
        <formula>today()&gt;  Display_Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Contract Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_of_Locations__c</fullName>
        <label>Display # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_SEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does SEO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_Redistribute__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked off so that a lead won't be redistributed to the general pool</inlineHelpText>
        <label>Don't Redistribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dual_Spend_Total_Amount__c</fullName>
        <formula>if(
AND(
 Corporate_Recurring_Total__c &gt;0, PV_Total_Amount__c &gt;0),
Corporate_Recurring_Total__c + PV_Total_Amount__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Dual Spend Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Contract_Length__c</fullName>
        <label>Email Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Fee_Per_Location__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Email Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_of_Locations__c</fullName>
        <label>Email # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Consumer_Media_Research__c</fullName>
        <label>End Consumer Media Research</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EstimatedCreativeWorkHours__c</fullName>
        <description>Used to store estimate number of hours.  Requested by the YBN performance team.</description>
        <label>Website Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedIntegrationWorkHours__c</fullName>
        <description>Used to store estimate number of hours. Requested by the YBN performance team.</description>
        <label>Integration Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedProjectMgmtWorkHours__c</fullName>
        <description>Used to store estimate number of hours. Requested by the YBN performance team.</description>
        <label>Total Professional Services Est Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Creative_Service_Fee__c</fullName>
        <label>Website List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Integration_Service_Fee__c</fullName>
        <label>Integration List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Launch_Date__c</fullName>
        <inlineHelpText>Estimated date onboarding will be completed and products will be live</inlineHelpText>
        <label>Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Project_Mgmt_Fees__c</fullName>
        <label>Total Professional Services List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_for_PV__c</fullName>
        <inlineHelpText>Total forecasted revenue for individual locations under PPA</inlineHelpText>
        <label>Estimated Revenue for PPA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Ad_Fund__c</fullName>
        <label>Estimated Total Ad Fund</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Launch_Date__c</fullName>
        <description>Based off the Close Date + the Run Rate (In Business Days)</description>
        <formula>/*ORIGINAL FORMULA   -  IF(NOT(ISBLANK(Run_Rate__c)), CloseDate + Run_Rate__c, CloseDate)
Updated to Business Days based on YO-64979*/ 

IF(NOT(ISBLANK(Run_Rate__c)), CloseDate + ROUND(((Run_Rate__c/5)*7),0)  , CloseDate)</formula>
        <inlineHelpText>Based off the Close Date + the Run Rate (In Business Days).   Website Implementation drop down will populate Run Rate if it is currently blank.</inlineHelpText>
        <label>Expected Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRANCHISE_FEE__c</fullName>
        <label>Franchise Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRANCHISE_ROYALTY_FEE__c</fullName>
        <label>Franchise Royalty Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facebook_Adoption_Length__c</fullName>
        <description>Used by YBN.</description>
        <label>Facebook Adoption Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Adoption_Monthly_Value__c</fullName>
        <formula>If( Facebook_Adoption_Length__c=0,0,(Forecasted_Facebook_Adoption_Total_Value__c / Facebook_Adoption_Length__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Adoption Monthly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_Adoption_Start_Date__c</fullName>
        <description>Used by YBN.</description>
        <label>Facebook Adoption - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Adoption_Target_Date__c</fullName>
        <label>Facebook Adoption - Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Contract_Length__c</fullName>
        <label>Facebook Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Fee_Per_Location__c</fullName>
        <label>Facebook Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_Multiplier__c</fullName>
        <description>.</description>
        <formula>CASE(Facebook_Contract_Length__c, 
0,0,
1,0.8,
2,0.8,
3,0.8,
4,0.8,
5,0.8,
6,1,
7,1,
8,1,
9,1,
10,1,
11,1,
12,1.2,1.2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Profile__c</fullName>
        <label>Facebook Profile</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Reviews_Fee__c</fullName>
        <description>Used by YBN.</description>
        <label>Facebook Ad Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_Setup_Fee__c</fullName>
        <label>Facebook Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_Setup_of_Locations__c</fullName>
        <label>Facebook Setup # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_of_Locations__c</fullName>
        <label>Facebook # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Difference__c</fullName>
        <formula>Total_Monthly_Spend_Sum__c - Total_One_Time_Fees_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field_Sales_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Sales Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Activity_DateTime__c</fullName>
        <description>Stores the date of the first activity.  Populated by the lookup summary app.</description>
        <label>First Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name1__c</fullName>
        <label>Contact First  Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Field_Sales_Director_Email__c</fullName>
        <description>Stores the email of the related Account Force Field Sales Director</description>
        <label>Relationship Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Forecasted_Facebook_Adoption_Total_Value__c</fullName>
        <formula>(Total_Number_of_PPA__c * Adoption_Facebook_Target__c * Facebook_Reviews_Fee__c * Facebook_Adoption_Length__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Facebook Adoption Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Foundations__c</fullName>
        <formula>(Total_Number_of_PPA__c * Adoption_Foundations_Target__c * PPA_Organic_Fee__c *  Foundations_Organic_Adoption_Length__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fcstd Foundations Adoption Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Monthly_Adoption_Value_Sum__c</fullName>
        <label>Forecasted Monthly Adoption Value (Sum)</label>
        <summarizedField>NetworkAdoptionProduct__c.MonthlyValue__c</summarizedField>
        <summaryFilterItems>
            <field>NetworkAdoptionProduct__c.Product__c</field>
            <operation>notContain</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>NetworkAdoptionProduct__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forecasted_Monthly_Adoption_Value__c</fullName>
        <formula>PPC_Adoption_Monthly_Value__c +  Reviews_A__c +  Foundations_Adoption_Monthly_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Monthly Adoption Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_PPC_Adoption_Total_Value__c</fullName>
        <formula>(Total_Number_of_PPA__c * Adoption_PPC_Target__c * IL_PPC_Estimated_Avg_Budget__c *  PPC_Adoption_Length__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted PPC Adoption Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Revenue__c</fullName>
        <inlineHelpText>Total annual projected revenue for specific opportunity, including all onetime and reoccurring fees/budgets.</inlineHelpText>
        <label>Forecasted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Reviews__c</fullName>
        <formula>Total_Number_of_PPA__c * Adoption_Reviews_Target__c * PPA_Reviews_Fee__c *  Reviews_Adoption_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Reviews Adoption Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foundations_Adoption_Length_in_Months__c</fullName>
        <formula>(Foundations_Adoption_Target_Date__c - Foundations_Adoption_Start_Date__c) /30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foundations Adoption Length in Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foundations_Adoption_Monthly_Value__c</fullName>
        <formula>If( Foundations_Organic_Adoption_Length__c =0,0,(Forecasted_Foundations__c /  Foundations_Organic_Adoption_Length__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foundations Adoption Monthly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foundations_Adoption_Start_Date__c</fullName>
        <label>Foundations Adoption-Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Foundations_Adoption_Target_Date__c</fullName>
        <label>Foundations Adoption-Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Foundations_Organic_Adoption_Length__c</fullName>
        <label>Foundations/Organic Adoption Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Bird_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Bird Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_360_Setup_Fee__c</fullName>
        <label>Google 360 Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Growth_Initiative__c</fullName>
        <label>Growth Initiative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HasBeenContacted__c</fullName>
        <description>Marks an opportunity as contacted based on whether a related activity has been created.  Currently being used by the YBN team.</description>
        <formula>IF(Total_of_Activities__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Been Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_an_Adwords_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has an Adwords Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Performance_Benchmarks__c</fullName>
        <label>Historical Performance Benchmarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Many_Services_Last_Month__c</fullName>
        <label>How Many Services Last Month?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>